what you have done

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,7 +46,7 @@ body
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background: url(images/phone.jpg) no-repeat;
+    background: url(imagecode.jpg) no-repeat;
     background-size: cover;
     background-position: centre;
     display: flex;
