--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,8 +27,11 @@ body
     color: #fff;
     text-decoration: none; 
     font-weight: 600;
-
 }
+.more{
+ color:greenyellow;
+}
+    
 .navbar a {
     display: inline-block;
     font-size: 25 px;
@@ -46,7 +49,7 @@ body
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background: url(imagecode.jpg) no-repeat;
+    background: url(images/imagecode.webp) no-repeat;
     background-size: cover;
     background-position: centre;
     display: flex;
