--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,7 +116,7 @@ input[type=text], select, textarea ,input[type=tel],input[type=email]{
 }
 
 input[type=submit] {
-  background-color: #04AA6D;
+  background-color: darksalmon;
   color: white;
   padding: 12px 20px;
   border: none;
